examples/errors/loop_type.aaa
fn
    main
{
    while
        true
    {
        0
    }
}
